...
                a.py_md,
                t.atoms.border_contrast_low,
              ]}>
              {note.renoteCount != null && note.renoteCount !== 0 ? (
                <Link to={renotesHref} label={_(msg`Renotes of this note`)}>
                  <Text
                    testID="renoteCount-expanded"
                    style={[a.text_md, t.atoms.text_contrast_medium]}>
                    <Text style={[a.text_md, a.font_bold, t.atoms.text]}>
                      {formatCount(i18n, note.renoteCount)}
                    </Text>{' '}
                    <Plural
                      value={note.renoteCount}
...
