...
    <EventStopper onKeyDown={false}>
      <Menu.Root control={lazyMenuControl}>
        <Menu.Trigger label={_(msg`Open note options menu`)}>
          {({props}) => {
            return (
              <NoteControlButton
                testID="noteDropdownBtn"
                big={big}
                label={props.accessibilityLabel}
                {...props}>
                <NoteControlButtonIcon icon={DotsHorizontal} />
              </NoteControlButton>
            )
...
