appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users&follows&thread"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"


# Navigate to thread
- extendedWaitUntil:
    visible: "Thread root"
- tapOn: "Thread root"
- assertVisible: "Thread reply"

# Can like the root note
- tapOn:
    id: "likeBtn"
    childOf:
        id: "noteThreadItem-by-bob.test"
- assertVisible: "1 like"
- tapOn:
    id: "likeBtn"
    childOf:
        id: "noteThreadItem-by-bob.test"
- assertNotVisible: "1 like"

# Can like a reply note
- tapOn:
    id: "likeBtn"
    childOf:
        id: "noteThreadItem-by-carla.test"
- tapOn:
    id: "likeBtn"
    childOf:
        id: "noteThreadItem-by-carla.test"

# Can renote the root note
- tapOn:
    id: "renoteBtn"
    childOf:
        id: "noteThreadItem-by-bob.test"
- tapOn: "Renote"
- assertVisible:
    id: "renoteCount-expanded"
- tapOn:
    id: "renoteBtn"
    childOf:
        id: "noteThreadItem-by-bob.test"
- tapOn: "Remove renote"
- assertNotVisible:
    id: "renoteCount-expanded"


# Can renote a reply note
- tapOn:
    id: "renoteBtn"
    childOf:
        id: "noteThreadItem-by-carla.test"
- tapOn: "Renote"
- assertVisible:
    id: "renoteCount"
    childOf:
        id: "noteThreadItem-by-carla.test"
- tapOn:
    id: "renoteBtn"
    childOf:
        id: "noteThreadItem-by-carla.test"
- tapOn: "Remove renote"
- assertNotVisible:
    id: "renoteCount"
    childOf:
        id: "noteThreadItem-by-carla.test"
