appId: xyz.blueskyweb.app
---
- runScript:
    file: ../../setupServer.js
    env:
        SERVER_PATH: ?users&follows&notes&feeds
- runFlow:
    file: ../../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

- tapOn:
    id: "noteDropdownBtn"
    index: 0
- tapOn:
    id: "noteDropdownReportBtn"
- tapOn:
    id: "report:option:com.atproto.moderation.defs#reasonOther"
- assertVisible:
    id: "report:labeler:mod-authority.test"
# reason "other" defaults with details open
- assertVisible:
    id: "report:details"
- tapOn:
    id: "report:details"
- inputText: "This is a test report"
- tapOn:
    id: "report:submit"
- assertNotVisible:
    id: "report:dialog"
